PLAT-104700: Fix scrollbar track margin

--- a/useScroll/useScroll.module.less
+++ b/useScroll/useScroll.module.less
@@ -5,8 +5,7 @@
 
 .scroll {
 	--scroll-scrollbar-size: 60px;
-	// To override margin of thumb in dropdown list
-	--scrollbar-thumb-margin: @sand-scrollbar-track-margin;
+	--scrollbar-track-margin: @sand-scrollbar-track-margin;
 
 	box-sizing: border-box;
 	overflow: hidden;
